# opengl-lintut

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in
include/: Camera.h  Light.h  Mesh.h  Model.h  Shader.h  SimpleMesh.h  csm.h  misc_sources.h  plane_normals.h  structures.h  texture_loader.h
include/glad/: glad.h
renders/: 3dstart.cpp  CMakeLists.txt  blending_prac.cpp  colorStart.cpp  nanosuit.cpp  quick_normals.cpp  shadows.cpp  texture_practice.cpp  transforms.cpp  uniforms_and_shader_colors.cpp
shaders/: basic_fragment_shader.glsl  basic_vertex_shader.glsl  csm.gs  csm.vs  cube_light_vert.glsl  empty.fs  floor.fs  floor.vs  floor_shadows_frag.glsl  frust.fs  frust.vs  light_frag_shader.glsl  light_sphere.fs  light_sphere.vs  light_vert_shader.glsl  lighting_frag_shader.glsl  lighting_vert_shader.glsl  model_reflex_frag.glsl  nano_shadow_frag.glsl  nano_shadow_vert.glsl  object.fs  object.vs  quick_normals_frag.glsl  quick_normals_vert.glsl  reflex_frag.glsl  reflex_vert.glsl  shadow_map.vs  simple_frag_shader.glsl  simple_mesh_frag_shader.glsl  simple_mesh_vert_shader.glsl  sky_fragment_shader.glsl  sky_vertex_shader.glsl  sphere.fs  sphere.vs
src/: CMakeLists.txt  Light.cpp  Mesh.cpp  Model.cpp  Shader.cpp  SimpleMesh.cpp  csm.cpp  glad.c  misc_sources.cpp  texture_loader.cpp
